# libpcrd

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
pcrd/: adb.py  input.py  main.py  ocr.py  output.py
tools/: curl_items.js
